--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -190,3 +190,63 @@ ul{
 {
     display:block
 }
+.authorization{
+    background-color: #5f5f5f;
+    padding: 35px 35px 35px 35px;
+}
+.authorizationHeader{
+    width:100%;
+    height:50px;
+    background-color: #fed328;
+}
+.authGroup{
+
+}
+.authInputGroup{
+    margin-bottom: 20px;
+    height:50px;
+}
+.authInputIcon{
+    background-color: #fed328;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    color: white;
+}
+.authGroup input{
+    height: 50px;
+    font-size: 20px;
+    padding-left: 15px;
+    width: 300px;
+}
+.buttonEnter{
+    cursor: pointer;
+    padding:5px 20px;
+    background-color: #fed328;
+    width:fit-content;
+}
+.reg_forgetPassword{
+    margin-top: 20px;
+    color: white;
+}
+.rememberMe{
+    margin-left: 10px;
+    color: white;
+    cursor: pointer;
+}
+.typeButtons{
+    cursor: pointer;
+    height:50px;
+    background-color: white;
+    margin-bottom: 20px;
+    width:170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.paddingHorizontal15{
+    padding:0px 15px;
+}
+.registrationView,.forgerPassword{
+    cursor: pointer;
+}
