--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -46,7 +46,7 @@
 }
 /*dropdown menu left part*/
 .header .menu-left-part{
-    z-index: 1000;
+    z-index: 50;
     padding-left: 40px;
 }
 .header .menu-left-part ul
@@ -85,7 +85,7 @@
 {
     display:none;
     position:absolute;
-    z-index: 2;
+    z-index: 100;
     top:100%;
     left:0;
     background:#fff;
@@ -123,7 +123,7 @@
 }
 /*dropdown menu right part*/
 .header .menu-right-part{
-    z-index: 1000;
+    z-index: 50;
     padding-right: 40px;
 }
 .header .menu-right-part ul
@@ -161,7 +161,7 @@
 {
     display:none;
     position:absolute;
-    z-index: 2;
+    z-index: 100;
     top:100%;
     right:0;
     background:#fff;
@@ -287,8 +287,15 @@
     margin-left: -125px;
 }
 .header .logoImage{
+    cursor: pointer;
     position: absolute;
-    z-index: 1;
+    z-index: 60;
     width: 175px;
     top:20px;
+}
+.header .consent{
+    margin-top: 20px;
+    margin-left: 15px;
+    color: #9f9f9f;
+    cursor: pointer;
 }
