--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,6 +1,20 @@
+.header .mainMenu{
+    display: block;
+}
+.header .hideMainMenu{
+    display: none;
+}
 .header ul{
     list-style-type: none;
     padding:0;
+}
+.react-responsive-modal-modal {
+    max-width: 800px;
+    position: relative;
+    padding: 0;
+    background: #ffffff;
+    background-clip: padding-box;
+    box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
 }
 .header .main{
     width: 1366px;
@@ -58,14 +72,14 @@
     padding:0;
 }
 
-.header .menu-left-part ul a
+.header .menu-left-part ul span
 {
     display:block;
     color:#323232;
     text-decoration:none;
     font-size:23px;
     padding: 40px 50px 40px 15px;
-    font-family:Arial
+    font-family:Arial;
 }
 
 .header .menu-left-part ul li
@@ -76,7 +90,7 @@
     padding:0;
 }
 
-.header .menu-left-part ul li a:hover
+.header .menu-left-part ul li span:hover
 {
     color:#dfa46a
 }
@@ -90,7 +104,6 @@
     left:0;
     background:#fff;
     padding-bottom:10px;
-
 }
 
 .header .menu-left-part ul ul li
@@ -102,12 +115,13 @@
 .header .menu-left-part ul ul li:hover{
     background-color: #fe9228;
 }
-.header .menu-left-part ul ul a
+.header .menu-left-part ul ul span
 {
     line-height:120%;
     padding:10px 15px;
 }
-.header .menu-left-part ul ul a:hover{
+.header .menu-left-part ul ul span:hover{
+    cursor: pointer;
     color:#fff;
 }
 
@@ -135,7 +149,7 @@
     padding:0
 }
 
-.header .menu-right-part ul a
+.header .menu-right-part ul span
 {
     display:block;
     color:#323232;
@@ -153,7 +167,7 @@
     padding:0
 }
 
-.header .menu-right-part ul>li>a:hover
+.header .menu-right-part ul>li>span:hover
 {
     color:#dfa56a;
 }
@@ -165,7 +179,7 @@
     top:100%;
     right:0;
     background:#fff;
-    padding:0
+    padding-bottom:10px;
 }
 
 .header .menu-right-part ul ul li
@@ -180,12 +194,13 @@
     background-color: #fe9228;
 }
 
-.header .menu-right-part ul ul a
+.header .menu-right-part ul ul span
 {
     line-height:120%;
     padding:10px 15px
 }
-.header .menu-right-part ul ul a:hover{
+.header .menu-right-part ul ul span:hover{
+    cursor: pointer;
     color:#fff;
 }
 .header .menu-right-part ul ul ul
@@ -298,4 +313,12 @@
     margin-left: 15px;
     color: #9f9f9f;
     cursor: pointer;
+}
+@media (max-width: 992px) {
+    .header .mainMenu{
+        display: none;
+    }
+    .header .hideMainMenu{
+        display: block;
+    }
 }
