--- a/src/components/styles/category.css
+++ b/src/components/styles/category.css
@@ -58,6 +58,10 @@
     height: 50px;
     width: 200px;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    padding:0px 20px;
+    align-items: center;
     background-color: #ffea00;
 }
 .categories .itemPicture{
