--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -15,6 +15,11 @@
     border-left: 1px solid #7c7c7c;
     border-right: 1px solid #7c7c7c;
 }
+
+.contacts{
+    color:white;
+}
+
 .footer .footerLogoTextLeft{
     color: #fff;
     font-size: 20px;
