--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -250,6 +250,7 @@
     width: 300px;
 }
 .header .buttonEnter{
+    margin: auto;
     cursor: pointer;
     padding:5px 20px;
     background-color: #fed328;
@@ -278,6 +279,7 @@
     padding:0px 15px;
 }
 .header .registrationView,.forgerPassword{
+    margin: auto;
     cursor: pointer;
 }
 .header .logoBlock{
