--- a/src/components/styles/support.css
+++ b/src/components/styles/support.css
@@ -52,6 +52,7 @@ input:focus {
     border: none;
 }
 .support .nameInputGroup textarea{
+    outline:none;
     background-color: transparent;
     border: none;
     width: 100%;
