--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -11,6 +11,11 @@
 .header .hideMainMenu{
     display: none;
 }
+
+.bg_header{
+    background-color: #323232;
+    padding: 0;
+}
 .header ul{
     list-style-type: none;
     padding:0;
@@ -28,12 +33,12 @@
     display: flex;
     align-items: center;
     height:55px;
-    background-color: #323232;
+    margin:0;
     padding: 0px 55px;
 }
 .header .headerRightPart{
-    position: absolute;
-    right: 87px;
+    display: flex;
+    justify-content: flex-end;
 }
 .header .circle{
     cursor: pointer;
@@ -41,7 +46,7 @@
     background-color: white;
     height: 40px;
     width: 40px;
-    margin: 0px 8px;
+    margin: 10px 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,9 +63,10 @@
 }
 .header .email{
     cursor: pointer;
-    margin:0px 25px;
+    margin:14px 25px;
 }
 .header .enter{
+    margin-top: 14px;
     cursor: pointer;
 }
 /*dropdown menu left part*/
