--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -29,18 +29,38 @@
     box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
 }
 
-.header .headerCircles{
+.headerCircles{
     display: flex;
     align-items: center;
     height:55px;
-    margin:0;
+    /*margin:0;*/
     padding: 0px 55px;
 }
+
+.fb:hover{
+    background-color: #ffdc00!important;
+    transition: 0.9s;
+}
+.tw:hover{
+    background-color: #ffdc00!important;
+    transition: 0.9s;
+}
+.ig:hover{
+    background-color: #ffdc00!important;
+    transition: 0.9s;
+}
+
+.phone_1{
+    background: #2d2d2d;
+    position: absolute;
+    display: none;
+}
+
 .header .headerRightPart{
     display: flex;
     justify-content: flex-end;
 }
-.header .circle{
+.circle, .fb,.tw,.ig{
     cursor: pointer;
     border-radius: 50px;
     background-color: white;
@@ -51,16 +71,39 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    transition: 0.9s;
 }
 .header .text{
     color:white;
     font-size: 21px;
     font-family: Arial;
 }
+
+.logoImage:hover{
+    -webkit-transform: rotateZ(360deg);
+    -ms-transform: rotateZ(360deg);
+    transform: rotateZ(360deg);
+}
+
+.hide_phone{
+    text-align: center;
+    background: #323232;
+    color: white;
+    font-family: Arial;
+    font-size: 21px;
+
+}
+
 .header .phone{
     cursor: pointer;
+    padding-top: 15px;
     margin-right: 15px;
 }
+
+.header .phone:hover .phone_1{
+    display: block!important;
+}
+
 .header .email{
     cursor: pointer;
     margin:14px 25px;
@@ -284,6 +327,7 @@
 }
 .header .rememberMe{
     margin-left: 10px;
+    margin-top: 5px;
     color: white;
     cursor: pointer;
 }
@@ -311,6 +355,9 @@
     left: 0;
     right: 0;
 }
+
+
+
 .header .logo{
     position: relative;
     height:114px;
@@ -336,12 +383,12 @@
     cursor: pointer;
     position: absolute;
     z-index: 60;
+    transition:all 0.9s ease;
     width: 175px;
     top:20px;
 }
 .header .consent{
     margin-top: 20px;
-    margin-left: 15px;
     color: #9f9f9f;
     cursor: pointer;
 }
