--- a/src/components/styles/category.css
+++ b/src/components/styles/category.css
@@ -31,7 +31,7 @@
     cursor: pointer;
     background-color: #454545;
 }
-.categories .categoryView{
+.categoryView{
     padding-top:40px;
     display: flex;
     justify-content: center;
@@ -45,7 +45,7 @@
     padding: 0;
     Width: 90%;
 }
-.categories .item{
+.item{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +54,7 @@
     border: 1px solid #acacac;
     margin-right: 20px;
 }
-.categories .itemBottom{
+.itemBottom{
     height: 50px;
     width: 200px;
     margin-bottom: 20px;
@@ -64,7 +64,7 @@
     align-items: center;
     background-color: #ffea00;
 }
-.categories .itemPicture{
+.itemPicture{
     width: 200px;
     height: auto;
 }
