--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -86,12 +86,25 @@
 }
 
 .hide_phone{
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 56px;
+    z-index: 100;
+    width: 200px;
     text-align: center;
     background: #323232;
     color: white;
     font-family: Arial;
     font-size: 21px;
 
+}
+
+
+.hide_phone li span{
+    padding-left: 10px;
 }
 
 .header .phone{
