--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -5,7 +5,7 @@ ul{
 
 .container_wrap{
     max-width: 1366px;
-    margin: auto;
+    margin: auto!important;
 }
 .slider{
     padding: 0;
@@ -139,7 +139,7 @@ ul{
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .img_us{
@@ -163,7 +163,7 @@ ul{
 }
 
 .contacts{
-    text-align: right;
+    text-align: left;
 }
 .footerList{
     text-align: left;
@@ -210,8 +210,7 @@ ul{
 }
 
 .categoryView_1{
-    position: absolute;
-    padding-top:40px;
+    padding-top: 200px;
     display: flex;
     justify-content: center;
 }
@@ -228,7 +227,12 @@ ul{
     justify-content: center;
     margin: 0;
     padding: 0;
-    Width: 90%;
+
+}
+
+.docm_div_1{
+    position: absolute;
+    width: 100%;
 }
 
 .docm_div_1 p{
