--- a/src/components/styles/category.css
+++ b/src/components/styles/category.css
@@ -45,12 +45,11 @@
     padding: 0;
     Width: 90%;
 }
-.item{
+.item_1{
     display: flex;
     justify-content: center;
     align-items: center;
     width:200px;
-    height: 220px;
     border: 1px solid #acacac;
     margin-right: 20px;
 }
