--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -6,6 +6,7 @@
     color: white;
 }
 .header .mainMenu{
+    height: 100px;
     display: block;
 }
 .header .hideMainMenu{
@@ -80,7 +81,7 @@
 .header .text{
     color:white;
     font-size: 21px;
-    font-family: Arial;
+    font-family: Open Sans;
 }
 
 .logoImage:hover{
@@ -101,7 +102,7 @@
     text-align: center;
     background: #323232;
     color: white;
-    font-family: Arial;
+    font-family: "Open Sans";
     font-size: 21px;
 
 }
@@ -114,7 +115,6 @@
 .header .phone{
     cursor: pointer;
     padding-top: 15px;
-    margin-right: 15px;
 }
 
 .header .phone:hover .phone_1{
@@ -149,8 +149,8 @@
     color:#323232;
     text-decoration:none;
     font-size:23px;
-    padding: 40px 50px 40px 15px;
-    font-family:Arial;
+    padding: 30px 50px 40px 15px;
+    font-family:Open Sans;
 }
 
 .header .menu-left-part ul li
@@ -172,7 +172,7 @@
     display:none;
     position:absolute;
     z-index: 100;
-    top:100%;
+    top:96%;
     left:0;
     background:#fff;
     padding-bottom:10px;
@@ -227,8 +227,8 @@
     color:#323232;
     text-decoration:none;
     font-size:23px;
-    padding: 40px 15px 40px 50px;
-    font-family:Arial
+    padding: 30px 15px 40px 50px;
+    font-family:"Open Sans"
 }
 
 .header .menu-right-part ul li
@@ -249,7 +249,7 @@
     display:none;
     position:absolute;
     z-index: 100;
-    top:100%;
+    top:96%;
     right:0;
     background:#fff;
     padding-bottom:10px;
@@ -377,12 +377,12 @@
 
 .header .logo{
     position: relative;
-    height:114px;
+    height:95px;
 }
 .header .logoTextStyle{
     color: #828282;
     font-size: 20px;
-    font-family: Arial;
+    font-family: "Open Sans";
     font-weight: bold;
     cursor: default;
 }
@@ -402,7 +402,7 @@
     z-index: 60;
     transition:all 0.9s ease;
     width: 175px;
-    top:20px;
+    top:-5px
 }
 .header .consent{
     margin-top: 20px;
