--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -120,6 +120,22 @@
 .header .phone:hover .phone_1{
     display: block!important;
 }
+.header .shop_numb{
+    position: absolute;
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: #000;
+    height: 20px;
+    color: #fff;
+    width: 20px;
+    margin: 0 8px;
+    top: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    transition: 0.9s;
+}
 
 .header .email{
     cursor: pointer;
