--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -65,6 +65,19 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.fb,.tw,.ig a:hover{
+    color: #000;
+}
+
+.fb a{
+    color: black;
+}
+
+.ig a{
+    color: #000;
+}
+
 .circle, .fb,.tw,.ig{
     cursor: pointer;
     border-radius: 50px;
@@ -98,7 +111,7 @@
     margin-right: auto;
     margin-top: 56px;
     z-index: 100;
-    width: 200px;
+    width: 220px;
     text-align: center;
     background: #323232;
     color: white;
