--- a/src/components/styles/support.css
+++ b/src/components/styles/support.css
@@ -26,6 +26,12 @@
     padding-left: 25px;
     font-size: 25px;
 }
+
+.img_supp{
+    width:100%;
+    padding:0 100px
+}
+
 .support .phoneIcon, .support .emailIcon, .support .locationIcon{
     font-size: 26px;
 }
